<resources>
    <string name="app_name">Bahok Rider</string>
    <string name="space" />
    <string name="Email">Email</string>
    <string name="map_key">AIzaSyByTET4DDm0q_RKnqVwt5aSAH3DvBUl6ag</string>
    <string name="Password">Password</string>
    <string name="aeskey">4263193851707158</string>
    <string name="aestransformation">AES/CBC/PKCS5Padding</string>
    <string name="forgotpassword"><b>Forgot Password</b></string>
    <string name="reset">Reset Password</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="Mobile">Mobile Number</string>
    <string name="alphabets">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ </string>
    <string name="signup">Sign Up</string>
    <string name="Signin">SIGN IN</string>
    <string name="SignIn">Sign In</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="newuser">New User? Signup</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Notification">Notification</string>
    <string name="Changepwd">Change Password</string>
    <string name="Xseedfeatures">Xseed Features</string>
    <string name="Logout">Logout</string>
    <string name="Search">Search</string>
    <string name="Head1">Step into a</string>
    <string name="Head2">\"BETTER, FASTER &amp; SMARTER\"</string>
    <string name="Head3">Hiring Process!</string>
    <string name="Head4">Please wait while we fetch your details…</string>
    <string name="Head5">\u00A92021, Bahok. All rights reserved.</string>
    <string name="storage_permission_message">Storage permission is needed to proceed your action, Do you want to allow?</string>
    <string name="camera_permission_message">Camera permission is needed to proceed your action, Do you want to allow?</string>
    <string name="phone_permission_message">Phone permission is needed to proceed your action, Do you want to allow?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="emptystring" />
    <string name="empty" />
    <string name="Fullname">Full Name</string>
    <string name="stepinto">Step into a</string>
    <string name="tagline">\"Better, Faster &amp; Smarter\"</string>
    <string name="d20dp">20dp</string>
    <string name="hiringprocess">Hiring Process!</string>
    <string name="alreadyaccount">Already have an account? Sign In</string>
    <string name="getmeout">Get me out of  here. Sign In</string>
    <string name="spacestring">&#160;</string>
    <string name="rememberme">Remember Me</string>
    <string name="or">or</string>
    <string name="jobtitle">Job Title</string>
    <string name="forgotpasswordtext">Enter your registered mobile number to reset your password.</string>
    <string name="title_activity_main_screen">MainScreenActivity</string>
    <string name="title_profile">Profile</string>
    <string name="title_home">Home</string>
    <string name="title_status">Status</string>
    <string name="title_setting">Settings</string>
    <string name="createdOn">Posted On:\n1Months ago</string>
    <string name="AppliedOn">Applied On :</string>
    <string name="pending">Pending</string>
    <string name="apply">Apply</string>
    <string name="applied">Applied</string>
    <string name="view">View</string>
    <string name="view_link"><u>View</u></string>
    <string name="NA">N/A</string>
    <string name="FP">Forgot Password?</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Done</string>
    <string name="slide_1_title">BAHOK</string>
    <string name="slide_1_desc"> On Time Every Time!</string>
    <string name="slide_2_title">FOOD - LOUNDRY - MEDICINE - POST</string>
    <string name="slide_2_desc"> We Deliver anything and Everything.</string>
    <string name="slide_3_title">RIDERS</string>
    <string name="slide_3_desc"> Heartbeat of Bahok!!</string>
    <string name="slide_4_title">Job Alerts</string>
    <string name="slide_4_desc">Get notified instantly for your submissions.\nAct faster on your notification and proceed\nbefore anyone else does. </string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="employment_type">Employment Type -</string>
    <string name="permanant">Permanent</string>
    <string name="comapny_req_code">Comapny Req. code -</string>
    <string name="req_597667">Req-597667</string>
    <string name="internal_req_code">Internal Req. code -</string>
    <string name="close_date">Close Date -</string>
    <string name="expiry_date">Expiry Date -</string>
    <string name="description">Description</string>
    <string name="other_details">Other Details</string>
    <string name="total_position">Total Position -</string>
    <string name="max_salary">Max. Salary -</string>
    <string name="min_salary">Min. Salary -</string>
    <string name="experience">Experience -</string>
    <string name="_0_year_s_0_month_s">0 Year(s) 0 Month(s)</string>
    <string name="qualification">Qualification -</string>
    <string name="technical_skills">Technical Skills -</string>
    <string name="visa_type">Visa Type -</string>
    <string name="us_experience">US Experience -</string>
    <string name="communication_skills">Communication Skills -</string>
    <string name="location">Location</string>
    <string name="job_location">Job Location -</string>
    <string name="kolhapur">Kolhapur</string>
    <string name="country">Country -</string>
    <string name="city">City -</string>
    <string name="state">State -</string>
    <string name="zip">Zip -</string>
    <string name="summary">Summary</string>
    <string name="machine_learning">Machine Learning</string>
    <string name="_789546">789546</string>
    <string name="_654123">654123</string>
    <string name="apply1">Apply</string>
    <string name="application_status">Application Status</string>
    <string name="time_ago_minutes">time_ago_minutes</string>
    <string name="search">Search Here..</string>
    <string name="selectskills">Tap here to select skills</string>
    <string name="skills">Skills</string>
    <string name="degree">Degree</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="selectdegree">Tap here to select degree</string>
    <string name="login">LOGIN</string>
    <string name="login_text">Please use your register mobile number.</string>
    <string name="click_here_new_request"><u>Click here to request for new account!</u></string>
    <string name="dont_have_account">Don`t have an account?</string>
    <string name="back"><![CDATA[<Back]]></string>
    <string name="logo_text">Bahok,best delivery partner!</string>
    <string name="driving_liesence">Driving License</string>
    <string name="adhar_card">NID Card</string>
    <string name="request_otp">Request OTP</string>
    <string name="request_for_new_delivery_boy">Please fill below details, upload your documents and submit your details.</string>
    <string name="otp_text">Please enter the OTP that has been sent to</string>
    <string name="mobile_default">(+91) 98601569054</string>
    <string name="submit">Submit</string>
    <string name="dont_received">Not received yet? <u>Resend</u></string>
    <string name="menu_orders">My Orders</string>
    <string name="menu_new_orders">All Orders</string>
    <string name="menu_more">More</string>
    <string name="menu_home">Home</string>
    <string name="account">Account</string>
    <string name="my_profile">My Profile</string>
    <string name="my_documents">My Documents</string>
    <string name="application_preference">Application Preferences</string>
    <string name="my_bank_details">My Bank Details</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="rate_app">Rate App</string>
    <string name="save_changes">Save Changes</string>
    <string name="save">Save</string>
    <string name="title_orders">Orders</string>
    <string name="cost">Cost</string>
    <string name="payment">Payment</string>
    <string name="delivery">Delivery</string>
    <string name="acceptorder">Accept Order</string>
    <string name="Customer">Customer</string>
    <string name="orderproduct">Ordered Products</string>
    <string name="subtotal">Subtotal</string>
    <string name="deliveryfee">Delivery Fee</string>
    <string name="tax">Tax</string>
    <string name="total">Total</string>
    <string name="order_details">Order Details</string>
    <string name="more_options">More</string>
    <string name="required">Required</string>
    <string name="not_matching">Confirm password is not matching.</string>
    <string name="permission_popup_title">Permission Needed</string>
    <string name="sefi_success">Thank you to start for a day with uploading selfi.</string>
    <string name="error_capture_image">Please capture image to proceed.</string>
    <string name="salfi_dialog_message">Please capture your start day selfi and upload to start for a day. \n Thank You!</string>
    <string name="upload">Upload</string>
    <string name="my_profile_updated">You has been successfully updated your profile.</string>
    <string name="register_success">You have been successfully submitted your details with us. We will get back to you once we verified your details.</string>
    <string name="thank_you">Thank you!</string>
    <string name="error_adhar">Invalid NID number</string>
    <string name="error_adhar_image">Please provide NID Card image.</string>
    <string name="error_license_image">Please provide license image.</string>
    <string name="reject">Reject</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_confirm_reject">Are you sure you want to reject this order request?</string>
    <string name="accept">Accept</string>
    <string name="reject_success">You have been successfully REJECTED the order request.</string>
    <string name="accept_success">You have been successfully ACCEPTED this request.</string>
    <string name="delivery_success">Thank you! You have been successfully DELIVERED this order request.</string>
    <string name="track_the_order">Track Order</string>
    <string name="customer_details">Customer Details</string>
    <string name="picked">Picked</string>
    <string name="new_order_received">You have received new order.</string>
    <string name="new_order">New Order</string>
    <string name="new_order_message">Please take a valid action on received order this order is available at you for 10 seconds only.</string>
    <string name="your_balance">This is your current balance</string>
    <string name="transactions">Transactions</string>
    <string name="balance">Balance</string>
    <string name="add_balance">Add Balance</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_number">Account Number</string>
    <string name="ifsc">IFSC</string>
    <string name="proceed">Proceed</string>
    <string name="wallet_message">Please place the amount below to add in your wallent balnace.</string>
    <string name="amount">Amount</string>
    <string name="account_holder">Account Holder</string>
    <string name="branch_name">Branch Name</string>
    <string name="check_image">Please add cancelled check image.</string>
</resources>