<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activities.WebViewActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_app" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:orientation="vertical"
        android:padding="@dimen/d10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_feature_background"
            android:orientation="horizontal"
            android:padding="@dimen/d20dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/balance"
                    android:textColor="@color/white"
                    android:textSize="@dimen/d20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_balance"
                    android:textColor="@color/white"
                    android:textSize="@dimen/d14sp" />


            </LinearLayout>

            <TextView
                android:id="@+id/tvBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="center"
                android:text="BDT\n0"
                android:textColor="@color/white"
                android:textSize="@dimen/d20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/d10dp"
            android:text="@string/transactions"
            android:textColor="@color/black"
            android:textSize="@dimen/d16sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvList"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAdd"
        android:layout_width="@dimen/d60dp"
        android:layout_height="@dimen/d60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/d10dp"
        android:background="@drawable/colorprimary_circular"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/d5dp">

        <ImageView
            android:layout_width="@dimen/d25dp"
            android:layout_height="@dimen/d25dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_add_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/add_balance"
            android:textColor="@color/white"
            android:textSize="@dimen/d8sp" />

    </LinearLayout>

</RelativeLayout>
